@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "compile": "tsc --pretty false",
-    "test": "npm run compile --silent && node dist/src/core/canon.test.js && node dist/src/core/validate.test.js && node dist/src/engine/graph.test.js && node dist/src/runtime/classify/artifact_kind_v0.test.js && node dist/src/runtime/config_v0.test.js && node dist/src/runtime/host/host_runner.test.js && node dist/src/runtime/host/host_update.test.js && node dist/src/runtime/host/host_status.test.js && node dist/src/runtime/host/host_cli_smoke.test.js && node dist/src/runtime/host/host_update_cli_smoke.test.js && node dist/src/runtime/host/gate_mode_enforced.test.js && node dist/src/runtime/redteam/stamp_forgery.test.js && node dist/src/runtime/redteam/policy_tamper.test.js && node dist/src/runtime/redteam/downgrade_truth.test.js && node dist/src/runtime/redteam/boundary_spoof_replay.test.js && node dist/src/engine/redteam/evidence_swap.test.js && node dist/src/core/redteam/secret_smuggling_and_leak.test.js && node dist/src/runtime/adapters/intake_adapter_v0.test.js && node dist/src/runtime/adapters/archive_adapter_v0.test.js && node dist/src/runtime/adapters/artifact_adapter_v1.test.js && node dist/src/runtime/container/docker_probe_v0.test.js && node dist/src/runtime/purpleteam/purple_baseline_block_flow.test.js && node dist/src/runtime/purpleteam/purple_compare_signal.test.js && node dist/src/runtime/purpleteam/purple_no_silent_pass.test.js && node dist/src/cli/blueteam/exit_code_contract.test.js && node dist/src/cli/blueteam/report_card_contract.test.js && node dist/src/cli/blueteam/library_command_contract.test.js && node dist/src/core/orangeteam/no_auto_keygen.test.js && node dist/src/core/orangeteam/receipt_privacy_contract.test.js && node dist/src/tools/greenteam/release_artifacts_present.test.js && node dist/src/tools/greenteam/release_bundle_manifest.test.js && node dist/src/tools/greenteam/workflow_artifact_meter_contract.test.js && node dist/src/tools/greenteam/workflow_verify360_contract.test.js && node dist/src/tools/greenteam/docs_release_contract.test.js && node dist/src/tools/greenteam/verify_release_managed_contract.test.js && node dist/src/tools/greenteam/container_local_only_contract.test.js && node dist/src/runtime/privacy_lint.test.js && node dist/src/tools/windows_shell_assets.test.js && node dist/src/cli/run_cli_smoke.test.js && node dist/src/cli/safe_run_cli_smoke.test.js && node dist/src/cli/library_cli_smoke.test.js && node dist/src/cli/library_state.test.js && node dist/src/cli/compare.test.js && node dist/src/cli/compare_cli_smoke.test.js && node dist/src/cli/shortcut_cli_smoke.test.js && node dist/src/cli/launchpad_cli_smoke.test.js && node dist/src/cli/auto_scan_on_change.test.js && node dist/src/cli/auto_scan_post_install.test.js && node dist/src/cli/auto_scan_scheduled.test.js && node dist/src/cli/license_cli_smoke.test.js && node dist/src/cli/ticket_pack.test.js && node dist/src/cli/email_cli_smoke.test.js && node dist/src/cli/container_scan_cli_smoke.test.js && node dist/src/cli/adapter_cli_smoke.test.js && node dist/src/cli/shadow_audit_cli_smoke.test.js && node dist/src/cli/shadow_audit_contract.test.js && node dist/src/cli/summarize_export_cli_smoke.test.js",
+    "test": "npm run compile --silent && node dist/src/core/canon.test.js && node dist/src/core/validate.test.js && node dist/src/engine/graph.test.js && node dist/src/runtime/classify/artifact_kind_v0.test.js && node dist/src/runtime/config_v0.test.js && node dist/src/runtime/host/host_runner.test.js && node dist/src/runtime/host/host_update.test.js && node dist/src/runtime/host/host_status.test.js && node dist/src/runtime/host/host_cli_smoke.test.js && node dist/src/runtime/host/host_update_cli_smoke.test.js && node dist/src/runtime/host/gate_mode_enforced.test.js && node dist/src/runtime/redteam/stamp_forgery.test.js && node dist/src/runtime/redteam/policy_tamper.test.js && node dist/src/runtime/redteam/downgrade_truth.test.js && node dist/src/runtime/redteam/boundary_spoof_replay.test.js && node dist/src/engine/redteam/evidence_swap.test.js && node dist/src/core/redteam/secret_smuggling_and_leak.test.js && node dist/src/runtime/adapters/intake_adapter_v0.test.js && node dist/src/runtime/adapters/archive_adapter_v0.test.js && node dist/src/runtime/adapters/artifact_adapter_v1.test.js && node dist/src/runtime/container/docker_probe_v0.test.js && node dist/src/runtime/purpleteam/purple_baseline_block_flow.test.js && node dist/src/runtime/purpleteam/purple_compare_signal.test.js && node dist/src/runtime/purpleteam/purple_no_silent_pass.test.js && node dist/src/cli/blueteam/exit_code_contract.test.js && node dist/src/cli/blueteam/report_card_contract.test.js && node dist/src/cli/blueteam/library_command_contract.test.js && node dist/src/core/orangeteam/no_auto_keygen.test.js && node dist/src/core/orangeteam/receipt_privacy_contract.test.js && node dist/src/tools/greenteam/release_artifacts_present.test.js && node dist/src/tools/greenteam/release_bundle_manifest.test.js && node dist/src/tools/greenteam/workflow_artifact_meter_contract.test.js && node dist/src/tools/greenteam/workflow_verify360_contract.test.js && node dist/src/tools/greenteam/docs_release_contract.test.js && node dist/src/tools/greenteam/verify_360_docs_sync_contract.test.js && node dist/src/tools/greenteam/verify_release_managed_contract.test.js && node dist/src/tools/greenteam/container_local_only_contract.test.js && node dist/src/runtime/privacy_lint.test.js && node dist/src/tools/windows_shell_assets.test.js && node dist/src/cli/run_cli_smoke.test.js && node dist/src/cli/safe_run_cli_smoke.test.js && node dist/src/cli/library_cli_smoke.test.js && node dist/src/cli/library_state.test.js && node dist/src/cli/compare.test.js && node dist/src/cli/compare_cli_smoke.test.js && node dist/src/cli/shortcut_cli_smoke.test.js && node dist/src/cli/launchpad_cli_smoke.test.js && node dist/src/cli/auto_scan_on_change.test.js && node dist/src/cli/auto_scan_post_install.test.js && node dist/src/cli/auto_scan_scheduled.test.js && node dist/src/cli/license_cli_smoke.test.js && node dist/src/cli/ticket_pack.test.js && node dist/src/cli/email_cli_smoke.test.js && node dist/src/cli/container_scan_cli_smoke.test.js && node dist/src/cli/adapter_cli_smoke.test.js && node dist/src/cli/shadow_audit_cli_smoke.test.js && node dist/src/cli/shadow_audit_contract.test.js && node dist/src/cli/summarize_export_cli_smoke.test.js",
     "weftend": "node dist/src/cli/main.js",
     "clean": "node -e \"require('fs').rmSync('dist',{recursive:true,force:true});\"",
     "proofcheck": "npm run compile --silent && node scripts/proofcheck.js",
