@@ -17,6 +17,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Updated `docs/RELEASE_CHECKLIST_ALPHA.md` with immutable-release change record checks for `CHANGELOG.md` and `docs/RELEASE_NOTES.txt`.
 - Refreshed `docs/RELEASE_ANNOUNCEMENT.txt` to match current adapter expansion, verify-gate, and workflow scope.
 - Updated release packaging to include `CHANGELOG.md` in staged bundle and copied release-sidecar artifacts.
+- Updated `verify:360` docs-sync and etiquette targets to include `CHANGELOG.md` and release announcement references.
 
 ### Safe-run evidence corridor
 - `safe-run` now verifies expected receipt artifacts for presence and digest consistency before completion.
@@ -50,6 +51,7 @@ Any correction, hardening pass, or follow-up change is recorded in a newer chang
 - Extended docs release contract coverage to enforce immutable-release checklist references (`CHANGELOG.md`, `docs/RELEASE_NOTES.txt`).
 - Extended docs release contract coverage to enforce release announcement workflow/managed-verify references.
 - Extended release bundle contract coverage to enforce `CHANGELOG.md` in packaging/checklist outputs.
+- Added Green Team contract test for `verify_360` docs-sync target coverage (`CHANGELOG.md`, release announcement, release notes).
 - `verify:360:harness` now validates strict-mode idempotence separation (`NEW` then `REPLAY`) to prevent strict/non-strict replay-key regression.
 - Emergency verify report output now includes policy summary lines (`policy.*`) and failure receipts carry interpreted policy fields for consistent fail-closed readability.
 
